# lcio

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conf_parser.c  conf_parser.h  config.h.in  config.ini  config_example.ini  dist_example.ini  distribution.ini  distribution_calculator.py  exec_wrapper.c  file_test.c  file_tree.c  file_tree.h  lcio.c  lcio.h  lcio_math.c  lcio_math.h  logging.h  main.c  params.c  posix.c  test.ini  time.c
docs/: Makefile  Problem_def.md  lcio.tex
lib/: mpiio.c  posix.c
